更新.babel 文件,更新 package.json,更新库的版本,更新异步路由加载方式

--- a/template/.babelrc
+++ b/template/.babelrc
@@ -3,10 +3,10 @@
     ["env", {
       "modules": false,
       "targets": {
-        "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+        "browsers": ["Android >= 4.0", "iOS >= 7"]
       }
     }],
-    "stage-2"
+    "stage-0"
   ],
   "plugins": ["transform-vue-jsx", "transform-runtime",    [
     "import",
