--- a/template/package.json
+++ b/template/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
+    "build": "node build/build.js",
     {{#if_eq runner "jest"}}
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     {{/if_eq}}
@@ -22,22 +23,20 @@
     {{#lint}}
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}",
     {{/lint}}
-    "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"{{#router}},
-    "vue-router": "^3.0.1"{{/router}},
-    {{#vuex}}"vuex": "^3.1.1"{{/vuex}},
-    "amfe-flexible": "^2.2.1",
+    "vue": "^2.6.11"{{#router}},
+    "vue-router": "^3.1.3"{{/router}},
+    {{#vuex}}"vuex": "^3.1.2"{{/vuex}},
     "axios": "^0.19.0",
+    "amfe-flexible": "^2.2.1",
     "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.15.2",
     "fastclick": "^1.0.6",
     "moment": "^2.24.0",
-    "qs": "^6.8.0",
-    "vant": "^2.1.8",
-    "vue-awesome-swiper": "^3.1.3",
-    "vue-jsonp": "^0.1.8"
+    "qs": "^6.9.1",
+    "vant": "^2.2.16",
+    "vue-awesome-swiper": "^3.1.3"
   },
   "devDependencies": {
     {{#lint}}
@@ -93,53 +92,48 @@
     "nightwatch": "^0.9.12",
     "selenium-server": "^3.0.1",
     {{/e2e}}
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
+    "autoprefixer": "^9.7.3",
+    "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-import": "^1.12.1",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "chalk": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.3.2",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "node-notifier": "^5.1.2",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^5.0.2",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "node-notifier": "^6.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
     "postcss-pxtorem": "^4.0.1",
-    "postcss-url": "^7.2.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "rimraf": "^2.6.0",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "portfinder": "^1.0.13",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "postcss-url": "^8.0.0",
+    "semver": "^7.1.0",
+    "shelljs": "^0.8.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "ora": "^4.0.3",
+    "rimraf": "^3.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^3.0.0",
+    "vue-loader": "^15.8.3",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.11",
+    "portfinder": "^1.0.25",
+    "webpack": "^4.41.3",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
   },
   "engines": {
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  }
 }
