--- a/template/package.json
+++ b/template/package.json
@@ -136,8 +136,7 @@
     "npm": ">= 3.0.0"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "Android >= 4.0",
+    "iOS >= 7"
   ]
 }
